# ironframe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SPEC.md  constitution.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  getting-started.md
docs/decisions/: ADR-000-template.md  ADR-001-hooks-outside-llm.md  ADR-002-open-core-licensing.md
examples/: budget_caps.py  compliance_audit.py  confidence_scoring.py  hook_enforcement.py  quickstart.py
src/ironframe/: __init__.py  config_v1_0.py  test_harness_v1_0.py
src/ironframe/agent_trust/: __init__.py  anomaly_v1_0.py  engine_v1_0.py  identity_v1_0.py  kill_switch_v1_0.py  permissions_v1_0.py  provenance_v1_0.py  tiers_v1_0.py
src/ironframe/audit/: __init__.py  logger_v1_0.py  schema_v1_0.py  stream_logger_v1_0.py  writer_v1_0.py
src/ironframe/budget/: __init__.py  ledger_v1_0.py  manager_v1_0.py  profiles_v1_0.py  routing_v1_0.py  sla_v1_0.py  telemetry_v1_0.py
src/ironframe/compliance/: __init__.py  adapter_base_v1_0.py  audit_requirements_v1_0.py  base_v1_0.py  finra_v1_0.py  gdpr_v1_0.py  hipaa_v1_0.py  sec_v1_0.py  soc2_v1_0.py
src/ironframe/conformance/: BACKLOG.md  __init__.py  drift_reporter_v1_0.py  engine_v1_0.py  rtm_v1_0.py  runtime_monitor_v1_0.py  static_checker_v1_0.py
src/ironframe/context/: __init__.py  budget_v1_0.py  compression_v1_0.py  manager_v1_0.py  rot_detector_v1_0.py  skill_tier_v1_0.py  telemetry_v1_0.py  trust_preservation_v1_0.py  zones_v1_0.py
src/ironframe/contracts/: component_01_mal.json  component_02_skills.json  component_03_state.json  component_04_hooks.json  component_05_sae.json  component_06_compliance.json  component_07_audit.json  component_08_recovery.json  component_09_context.json  component_10_kb_grounding.json  component_11_security.json  component_12_tool_governance.json  component_13_eval.json  component_14_coordination.json  component_15_budget.json  component_16_io_schema.json  component_17_agent_trust.json  component_18_conformance.json
src/ironframe/coordination/: C14_INSTRUMENTATION.md  __init__.py  handoff_v1_0.py  loops_v1_0.py  messages_v1_0.py  protocol_v1_0.py  resources_v1_0.py  roles_v1_0.py  tasks_v1_0.py
src/ironframe/eval/: __init__.py  feedback_v1_0.py  gates_v1_0.py  isolation_v1_0.py  methods_v1_0.py  runner_v1_0.py  scenario_v1_0.py
src/ironframe/hooks/: __init__.py  engine_v1_0.py
src/ironframe/io_schema/: __init__.py  boundaries_v1_0.py  coercion_v1_0.py  drift_v1_0.py  errors_v1_0.py  registry_v1_0.py  validator_v1_0.py
src/ironframe/kb/: __init__.py  arbitration_v1_0.py  freshness_v1_0.py  grounding_v1_0.py  manager_v1_0.py  policy_v1_0.py  (+5 more)
tests/: conftest.py  test_c10_kb.py  test_c11_security.py  test_c13_eval.py  test_c14_coordination.py  test_c15_budget.py  test_c16_schema.py  test_c17_trust.py  test_c18_conformance.py  test_c2_skills.py  test_c3_state.py  test_c4_hooks.py  test_c6_logic.py  test_c8_recovery.py  test_finra_adapter.py  test_gdpr_adapter.py  test_hipaa_adapter.py  test_mal_response.py  test_rtm_coverage.py  test_sec_adapter.py  test_soc2_adapter.py  test_wiring.py
(+71 files in other folders)
